small fixes math

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,5 +27,21 @@ layout: compress
 
     {% include scripts.html %}
 
+    <!-- MathJax script implementation -->
+    <script>
+      MathJax = {
+        tex: {
+          inlineMath: [['$', '$'], ['\\(', '\\)']]
+        },
+        svg: {
+          fontCache: 'global'
+        }
+      };
+    </script>
+    <script type="text/javascript" id="MathJax-script" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+    </script>
+    <!-- End MathJax script -->
+
   </body>
 </html>
